--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
     
     <section class="sns" id="sns">
         <h2 class="title">SNS</h2>
-        <p>新作情報や他にも色々発信していますので是非フォローをお願いします!<br><a href="https://twitter.com/simasima219"target="_blank">Twitter</a><br><a href="https://www.instagram.com/simasima220/"target="_blank">instagram</a>
+        <p>新作情報や他にも色々発信していますので是非フォローをお願いします!<br><a href="https://twitter.com/simasimaLINE217"target="_blank">Twitter</a><br><a href="https://www.instagram.com/simasima220/"target="_blank">instagram</a>
             </section>
           
   <section class="mail" id="mail">
