--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
       <li><a href="#linestamp">LINEスタンプについて</a></li>
       <li><a href="#lineup">ラインナップ</a></li>
         <li><a href="#recommended">おすすめ</a></li>
+      <li><a href="#blog">ブログ</a></li>
         <li><a href="#sns">SNS</a></li>
       <li><a href="#mail">お問合せ</a></li>
     </ul>
@@ -76,7 +77,11 @@
         <img class="stamp">
               <br><br><br><br>※スタンプは線と色がついている場所以外は透明になっています。ご注意下さい。</p>
           </section>
-    
+  <section class="blog" id="blog">
+    <h2 class="title">ブログ</h2>
+    <p>ブログではスタンプの紹介などをして行きます！<br><a href="https://profile.ameba.jp/me"target="_blank">Amebaブログ
+      </section>
+      
     <section class="sns" id="sns">
         <h2 class="title">SNS</h2>
         <p>新作情報や他にも色々発信していますので是非フォローをお願いします!<br><a href="https://twitter.com/simasimaLINE217"target="_blank">Twitter</a><br><a href="https://www.instagram.com/simasima220/"target="_blank">instagram</a>
