--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
           </section>
   <section class="blog" id="blog">
     <h2 class="title">ブログ</h2>
-    <p>ブログではスタンプの紹介などをして行きます！<br><a href="https://profile.ameba.jp/me"target="_blank">Amebaブログ
+    <p>ブログではスタンプの紹介などをして行きます！<br><a href="https://profile.ameba.jp/me"target="_blank">Amebaブログ</a>
       </section>
       
     <section class="sns" id="sns">
